# pvn-v2

./: .gitattributes  .gitignore  README.md
.github/workflows/: backend-ci.yml  integration-ci.yml  windows-client-ci.yml  windows-client-release.yml
apps/windows-service/: Cargo.toml
apps/windows-service/src/: main.rs
apps/windows-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/windows-ui/scripts/: assert-mvp-ui.mjs  copy-service.mjs
apps/windows-ui/src/: main.tsx  styles.css
apps/windows-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows-ui/src-tauri/resources/: install-helper-service.ps1  uninstall-helper-service.ps1
apps/windows-ui/src-tauri/src/: main.rs
apps/windows-ui/src-tauri/windows/: nsis-hooks.nsh
docs/architecture/: ADR-001-pvn-v2-architecture.md
docs/deployment/: VPS.md  WINDOWS_RELEASES.md
docs/testing/: WINDOWS_E2E_TESTING.md
infra/vps/: deploy-api.sh  install.sh  pvn-v2-api.service  wireguard.sh
release/download-site/: README.md  index.html
scripts/e2e/: windows-vpn-e2e.ps1
scripts/release/: sign-windows-artifacts.ps1
services/api/: go.mod  go.sum
services/api/cmd/api/: main.go
services/api/cmd/seed-user/: main.go
services/api/internal/config/: config.go  config_test.go  deploy_scripts_test.go
services/api/internal/db/: store.go  store_test.go
services/api/internal/httpapi/: server.go  server_test.go
services/api/internal/wg/: manager.go  manager_test.go
services/api/migrations/: 001_init.sql
